# tair-rdb-modified

./: ChangeLog  Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
rpm/: scm.xml  tair_rdb-build.sh
scripts/: Makefile  Makefile.in  tair.sh
share/: Makefile  Makefile.am  Makefile.in  dataserver.conf.default  group.conf.default
src/: Makefile  Makefile.in
src/client/: .tair_client_api_impl.cpp.swn  .tair_client_api_impl.cpp.swo  .tair_client_api_impl.cpp.swp  Makefile  Makefile.am  Makefile.in  tair_client.cpp  tair_client.hpp  tair_client_api.cpp  tair_client_api.hpp  tair_client_api_impl.cpp  tair_client_api_impl.hpp  tair_client_capi.cpp  tair_client_capi.hpp
src/client/.deps/: packet_factory.Plo  tair_client.Po  tair_client_api.Plo  tair_client_api_impl.Plo  tair_client_capi.Plo
src/common/: Makefile.am  Makefile.in  base_queue_node.hpp  binlog.hpp  data_dumpper.cpp  data_dumpper.hpp  data_entry.hpp  define.hpp  disk_queue.hpp  dump_data_info.hpp  file_op.hpp  item_data_info.hpp  local_queue.hpp  log.hpp  mem_queue.hpp  mmap_file.hpp  queue_config.h  stat_helper.cpp  stat_helper.hpp  stat_info.hpp  util.cpp  util.hpp  wait_object.hpp
src/configserver/: Makefile  Makefile.in  conf_server_table_manager.cpp  conf_server_table_manager.hpp  conf_server_table_monitor.cpp  conf_server_table_transfer.cpp  const_parameter_pinter.cpp  group_info.cpp  group_info.hpp  server_conf_thread.cpp  server_conf_thread.hpp  server_info.cpp  server_info.hpp  server_info_allocator.cpp  server_info_allocator.hpp  server_info_file_mapper.cpp  server_info_file_mapper.hpp  server_info_file_monitor.cpp  stat_info.cpp  stat_info.hpp  stat_info_test.cpp  table_builder.cpp  table_builder.hpp  table_builder1.cpp  table_builder1.hpp  table_builder2.cpp  table_builder2.hpp  tair_cfg_svr.cpp  tair_cfg_svr.hpp
src/configserver/.deps/: conf_server_table_checker.Po  conf_server_table_manager.Po  conf_server_table_monitor.Po  conf_server_table_transfer.Po  const_parameter_pinter.Po  group_info.Po  server_conf_thread.Po  server_info.Po  server_info_allocator.Po  server_info_file_mapper.Po  server_info_file_monitor.Po  stat_info.Po  stat_info_test.Po  table_builder.Po  table_builder1.Po  table_builder2.Po  tair_cfg_svr.Po
src/dataserver/: Makefile  Makefile.am  Makefile.in  base_migrate.hpp  base_tair_manager.hpp  duplicate_base.hpp  duplicate_manager.cpp  duplicate_manager.hpp  heartbeat_thread.cpp  heartbeat_thread.hpp  migrate_manager.cpp  migrate_manager.hpp  request_processor.cpp  request_processor.hpp  table_manager.cpp  table_manager.hpp  tair_manager.cpp  tair_manager.hpp  tair_server.cpp  tair_server.hpp  update_log.cpp  update_log.hpp
src/dataserver/.deps/: duplicate_manager.Po  heartbeat_thread.Po  migrate_manager.Po  request_processor.Po  stat_helper.Po  table_manager.Po  tair_manager.Po  tair_server.Po  update_log.Po
src/packets/: Makefile  Makefile.am  Makefile.in  addfilter_packet.hpp  base_packet.hpp  conf_heartbeat_packet.hpp  data_server_ctrl_packet.hpp  dump_area_packet.hpp  dump_bucket_packet.hpp  dump_packet.hpp  duplicate_packet.hpp  exists_packet.hpp  expire_packet.hpp  expireat_packet.hpp  generic_zrangebyscore_packet.hpp  get_group_packet.hpp  get_migrate_machine.hpp  get_packet.hpp  get_server_table_packet.hpp  getset_packet.hpp  group_names_packet.hpp  hdel_packet.hpp  heartbeat_packet.hpp  hexists_packet.hpp  hget_packet.hpp  hgetall_packet.hpp  hincrby_packet.hpp  hkeys_packet.hpp  hlen_packet.hpp  hmget_packet.hpp  hmset_packet.hpp  hset_packet.hpp  hsetnx_packet.hpp  hvals_packet.hpp  inc_dec_packet.hpp  info_packet.hpp  items_packet.hpp  lazy_remove_area_packet.hpp  lindex_packet.hpp  llen_packet.hpp  (+40 more)
src/packets/.deps/: packet_factory.Po
src/plugin/: Makefile.am  Makefile.in  base_plugin.hpp  hash_packet_pair.hpp  plugin_manager.cpp  plugin_manager.hpp  remote_sync_manager.cpp  remote_sync_manager.hpp  sample_plugin.cpp  sample_plugin.hpp
src/storage/: Makefile  Makefile.am  Makefile.in  dump_filter.cpp  dump_filter.hpp  dump_manager.cpp  dump_manager.hpp  storage_manager.hpp
src/storage/.deps/: dump_filter.Po  dump_manager.Po  file_op.Po
src/storage/fdb/: Makefile.in  data_file_reader.cpp  data_file_reader.hpp  fdb_bucket.cpp  fdb_bucket.hpp  fdb_item.hpp  fdb_item_manager.cpp  fdb_item_manager.hpp  fdb_manager.cpp  fdb_manager.hpp  file_op.cpp  file_op.hpp  free_blocks_manager.cpp  locker.cpp  (+3 more)
src/storage/mock/: Makefile  Makefile.am  Makefile.in  mockdb_manager.cpp  mockdb_manager.h
src/storage/mock/.deps/: mockdb_manager.Po
src/storage/rdb/: Makefile  Makefile.am  Makefile.in  rdb_manager.cpp  rdb_manager.h  redis_db.h  redis_db_context.cpp  redis_db_context.h  redis_db_session.cpp  redis_db_session.h  redis_define.h  redis_lib.h  redis_profiler.cpp  redis_server_cron.cpp  redis_server_cron.h  scope_lock.h
src/storage/rdb/.deps/: rdb_manager.Po  redis_db_context.Po  redis_db_session.Po  redis_profiler.Po  redis_server_cron.Po
src/storage/rdb/redis/: Makefile  command.h  config.h  db.c  dict.c  dict.h  filter_list.c  networking.c  object.c  rdb.c  redis.c  redis.h  sds.c  sds.h  t_hash.c  t_list.c  t_set.c  t_string.c  t_zset.c  zipmap.c  zipmap.h  zmalloc.c  zmalloc.h
test/: Makefile  Makefile.am  Makefile.in
test/binlog_test/: Makefile  Makefile.am  Makefile.in  binlog_test.cpp
test/failover_test/: clean.bat  eclipse.bat  pack.bat
test/interface_test/: Makefile  Makefile.am  Makefile.in
test/localqueue_test/: Makefile  Makefile.am  Makefile.in  disk_queue_unittest.cpp  local_queue_unittest.cpp  mem_queue_unittest.cpp  test_queue_node.hpp
test/rdb_interface_test/: Makefile  Makefile.am  Makefile.in  base_test.hpp  hash_normal_test.cpp  hdel_general_test.cpp  hget_general_test.cpp  hgetall_general_test.cpp  hmget_general_test.cpp  hmset_general_test.cpp  hset_general_test.cpp  sadd_general_test.cpp  set_normal_test.cpp  smembers_general_test.cpp  srem_general_test.cpp  test_helper.cpp  test_helper.hpp  test_test_helper.cpp
(+40 files in other folders)
